# dzBridge-common

./: .gitignore  CMakeLists.txt
Common/: CMakeLists.txt  DzBridgeDialog.h  DzBridgeSubdivisionDialog.cpp  DzRuntimePluginAction.cpp  DzRuntimePluginAction.h
Test/: Localize-JobPool.dsa  QA Manual Test Cases.md  QA-Test-Script.dsa  activeMorphsTest.dsa
Test/Results/: TestResults_DzBridgeNameSpaceDzBridgeSubdivisionDialog.json  TestResults_DzBridgeNameSpaceDzBridgeSubdivisionDialog.txt
Test/UnitTests/: CMakeLists.txt  RunUnitTests.dsa  UnitTest.cpp  UnitTest_DzBridgeAction.cpp  UnitTest_DzBridgeDialog.cpp  UnitTest_DzBridgeDialog.h  UnitTest_DzBridgeMorphSelectionDialog.cpp  UnitTest_DzBridgeMorphSelectionDialog.h  UnitTest_DzBridgeScriptableAction.cpp  UnitTest_DzBridgeScriptableAction.h  UnitTest_DzBridgeSubdivisionDialog.cpp  UnitTest_DzBridgeSubdivisionDialog.h
Test/testcases/: QA_Utility_Functions.dsa  TC01.dsa  TC06.dsa  TC07.dsa  TC08.dsa  quick_test.dsa  test_runner--single.dsa  test_runner.dsa
Unreal/DazStudioPlugin/: CMakeLists.txt  DzUnrealAction.cpp  DzUnrealAction.h  DzUnrealDialog.cpp  DzUnrealDialog.h  DzUnrealMorphSelectionDialog.cpp  DzUnrealMorphSelectionDialog.h  DzUnrealSubdivisionDialog.cpp  DzUnrealSubdivisionDialog.h  pluginmain.cpp  version.h
Unreal/UnrealPlugin/DazToUnreal/: DazToUnreal.uplugin
Unreal/UnrealPlugin/DazToUnreal/Source/DazToUnreal/Private/: DazToUnreal.cpp
Unreal/UnrealPlugin/DazToUnreal/Source/DazToUnreal/Public/: DazToUnreal.h
include/: CMakeLists.txt  DzBridgeAction.h  DzBridgeDialog.h  DzBridgeMorphSelectionDialog.h  DzBridgeSubdivisionDialog.h  DzRuntimePluginAction.h  UnitTest.h  common_version.h  dzbridge.h
src/: CMakeLists.txt  DzBridge.def  DzBridgeAction.cpp  DzBridgeAction_Scriptable.cpp  DzBridgeAction_Scriptable.h  DzBridgeDialog.cpp  DzBridgeMorphSelectionDialog.cpp  DzBridgeScriptableAction.cpp  DzBridgeScriptableAction.h  DzBridgeSubdivisionDialog.cpp  DzRuntimePluginAction.cpp  pluginmain.cpp
